--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Noto Sans&display=swap');
+
 /* variables/colors/etc */
 :root {
+    --root-bg: #000;
     --background: #282a36;
-    --current-line: #44475a;
+    --background-lighter: #44475a;
+    --background-highlight: #6272a4;
     --foreground: #f8f8f2;
-    --comment: #6272a4;
     --cyan: #8be9fd;
     --green: #50fa7b;
     --orange: #ffb86c;
@@ -20,11 +23,42 @@ html, body {
     padding: 0;
 }
 
-/*
-Utilities
-*/
-.hide {
+fieldset {
     display: none;
+}
+
+/* generics */
+html, body {
+    font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+table {
+    
+}
+thead tr {
+    
+}
+tbody tr {
+    
+}
+
+/*
+building blocks
+*/
+.g_bubble {
+    display: flex;
+    flex-direction: column;
+}
+.g_bubblewrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+.g_bubblewrap .g_section {
+    flex: 1;
+}
+.g_section {
+    margin: 0.25rem;
 }
 
 /*
@@ -41,18 +75,22 @@ tooltips
     display: flex;
     opacity: 1.0;
     position: absolute;
-    background: var(--yellow);
-    color: #000000;
-    border: 1px solid #000;
+    border: 1px solid;
     border-radius: 0.5rem;
     padding: 0.25rem;
     top: 2rem;
     z-index: 100;
     min-width: 30rem;
     max-width: 50vw;
-    filter: drop-shadow(0.25rem 0.25rem 0.1rem #0004);
 }
 
+/* image preview */
+#imagepreview {
+    position: fixed;
+    padding: 5px;
+    z-index: 1000;
+}
+    
 /* 
 main layout 
 */
@@ -60,6 +98,7 @@ body {
     display: grid;
     grid-template-columns: 10rem 1fr;
     grid-template-rows: auto;
+    column-gap: 1rem;
     grid-template-areas: 
         "nav main"
         "nav footer";
@@ -81,6 +120,13 @@ Main Navigation
     display: flex;
     flex-direction: column;
 }
+#layout-nav #layout-search {
+    order: 1;
+}
+#layout-nav #layout-menu {
+    order: 2;
+}
+
 #layout-nav ul {
     margin: 0;
     padding-left: 0;
@@ -101,6 +147,7 @@ Main Navigation
     padding: 0.25rem 0.5rem;
     border-bottom: 0.25rem solid;
     position: relative;
+    font-weight: bold;
 }
 /* ribbon */
 #layout-menu .sub-menu > .tab:before {
@@ -108,7 +155,6 @@ Main Navigation
     display: block;
     width: 0.5rem;
     height: 100%;
-    background: #f0f;
     border-bottom: 0.25rem solid;
     position: absolute;
     right: 0;
@@ -128,18 +174,203 @@ Main Navigation
     top: 100%;
     clip-path: polygon(0 0.25rem, 100% 0.25rem, 0 100%);
 }
-#layout-menu .sub-menu > ul {
+#layout-menu .sub-menu > ul li {
+    text-transform: capitalize;
+}
+#layout-menu .sub-menu > ul li a {
+    display: block;
     padding: 0.25rem 1rem;
 }
 
 #layout-nav .menu_hr {
-    height: 1rem;
-    width: 100%;
-    background: #f0f;
+    display: none;
 }
 
-/* icons */
+/* main content */
+#layout-content {
+    margin: 1rem;
+}
 
+/* tabs */
+
+#layout-tabs ul {
+    display: flex;
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
+#layout-tabs li {
+    flex: 1;
+    text-align: center;
+    border: 1px solid;
+}
+#layout-tabs li:not(:first-of-type) {
+    border-left: none;
+}
+#layout-tabs li.selected {
+    border-bottom: none;
+    box-shadow: inset 0 3px 0;
+}
+#layout-tabs li a {
+    display: block;
+    padding: 1rem;
+    text-decoration: none;
+}
+
+/* main content */
+#layout-main {
+    padding: 1rem 0.5rem;
+}
+
+#layout-main h1 {
+    margin: 0;
+    padding: 0.5rem;
+    font-size: 1.5rem;
+}
+
+#layout-main h2 {
+    margin: 0;
+    padding: 0.25rem;
+    font-size: 1.25rem;
+}
+
+#latestnews .container {
+    max-height: 17rem;
+    overflow: hidden;
+}
+
+#latestnews
+,.main_all .waifu
+,.main_all .stats
+,.main_all .calendar
+,#myhints
+,.main_all .latest .schedule
+,.main_all .latest .files
+,#hotanime
+,#latestaired
+,#latestended
+,#similaranime
+,#bestof80s
+,#bestof90s
+,#bestof00s
+,#bestof10s
+{
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "title buttons"
+        "main main";
+}
+#layout-main .g_section > h2
+{
+    grid-area: title;
+    background: var(--background-highlight);
+    border-bottom: 0.25rem solid;
+}
+#layout-main .g_section  > .edit_actions
+{
+    grid-area: buttons;
+    background: var(--background-lighter);
+    display: flex;
+    border-bottom: 0.25rem solid;
+    padding: 0rem 0.5rem;
+}
+#layout-main .g_section  > .edit_actions span {
+    display: flex;
+}
+#layout-main .g_section  > .edit_actions a {
+    text-decoration: none;
+    align-self: center;
+    color: #fff;
+    text-transform: capitalize;
+}
+
+#layout-main .g_section  > .container 
+{
+    grid-area: main;
+    border: 1px solid;
+    padding: 0.5rem;
+}
+
+#layout-main .box
+{
+    background: var(--background-lighter);
+    border-radius: 0.5rem;
+    margin: 0.25rem;
+    padding: 0.25rem;
+}
+
+#layout-main .box.small {
+    font-size: 0.8rem;
+}
+
+#layout-main .box > .data .name {
+    display: flex;
+}
+
+#layout-main div.main_all div.calendar .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+#layout-main div.main_all div.calendar .box {
+    flex: 1 20% 1;
+}
+
+#layout-main div.main_all div.calendar .box .data {
+    max-width: 150px;
+}
+
+
+/* page: index */
+.main_all {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-auto-flow: row dense;
+    grid-template-areas: 
+        "news"
+        "calendar"
+        "myhints"
+        "latest"
+        "stats"
+        "hotanime"
+        "bestof";
+}
+.main_all > .news {
+    grid-area: news;
+    display: flex;
+}
+.main_all > .news > .latestnews {
+    flex: 2;
+    text-overflow: ellipsis;
+}
+.main_all > .news > .stats {
+    flex: 0.5;
+}
+    
+.main_all .calendar {
+    grid-area: calendar;
+}
+.main_all .myhints {
+    grid-area: myhints;
+}
+.main_all .latest {
+    grid-area: latest;
+}
+.main_all .datablocks:nth-of-type(0) {
+    grid-area: hotanime;
+}
+.main_all .datablocks:nth-of-type(1) {
+    grid-area: bestof;
+}
+
+
+/* icons */
+div.icons {
+    display: inline-block;
+}
 .i_icon {
     display: inline-block;
     background: #0f05;
@@ -164,28 +395,49 @@ Main Navigation
 .i_icon.i_help:before {
     content: "?";
 }
+.i_icon.i_info:before {
+    content: "!";
+}
 
 /* 
 color styling
 */
 body {
-    background-color: var(--background);
+    background-color: var(--root-bg);
     color: var(--foreground);
 }
+a {
+    color: var(--cyan);
+}
+a:visited {
+    color: var(--purple);
+}
+a:hover {
+    color: var(--green);
+}
+
+th {
+    background: var(--background-lighter);  
+}
+
+#layout-main {
+    background-color: var(--background);   
+}
+
 #layout-nav {
-    background-color: var(--current-line);
+    background-color: var(--background-lighter);
 }
 #layout-nav a {
     color: var(--foreground);
 }
 #layout-menu .sub-menu > .tab {
-    background-color: var(--comment);
+    background-color: var(--background-highlight);
 }
 #layout-menu .sub-menu > .tab:before {
-    background-color: var(--comment);
+    background-color: var(--background-highlight);
 }
 #layout-menu .sub-menu > .tab:after {
-    background-color: var(--comment);
+    background-color: var(--background-highlight);
 }
 
 #layout-menu .sub-menu.main > .tab
@@ -226,4 +478,28 @@ body {
 ,#layout-menu .sub-menu.account > .tab:before
 {
     border-color: var(--pink);
+}
+
+#layout-menu .sub-menu > ul li a:hover {
+    background: var(--background-highlight);
+}
+
+
+#layout-tabs li.selected {
+    background: var(--background);
+}
+
+.tooltip:hover .wrapper {
+    background: var(--background-lighter);
+    color: var(--foreground);
+    border-color: var(--background-highlight);
+    filter: drop-shadow(0.25rem 0.25rem 0.1rem #0004);
+}
+
+/* overrides */
+.hide {
+    display: none;
+}
+.wrap {
+    overflow-wrap: break-word;
 }
